registration fix, sign out, Blog details, fix bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="registration">Registration</string>
     <string name="name">Name</string>
     <string name="save">Save</string>
+    <string name="exit">Exit</string>
     <string name="updated">Updated</string>
     <string name="gallery">Gallery</string>
     <string name="camera">Camera</string>
